Removed unused schema and endpoints, forgot the users endpoint, needed to be a CMS specific one.
